cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_365.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/bio_ok.c:409: error: DEAD_STORE
  The value written to &ret (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/bio_ok.c:409:5: Write of unused value
407.   static long ok_callback_ctrl(BIO *b, int cmd, BIO_info_cb *fp)
408.   {
409.       long ret = 1;
           ^
410.       BIO *next;
411.   
